@@ -1,10 +1,12 @@
 package com.handong.rebon.integration.shop;
 
+import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
 
 import com.handong.rebon.category.domain.Category;
 import com.handong.rebon.category.domain.repository.CategoryRepository;
+import com.handong.rebon.common.factory.ImageFactory;
 import com.handong.rebon.integration.IntegrationTest;
 import com.handong.rebon.shop.application.ShopService;
 import com.handong.rebon.shop.application.dto.request.ShopCreateRequestDto;
@@ -16,6 +18,7 @@ import com.handong.rebon.tag.domain.Tag;
 import com.handong.rebon.tag.domain.repository.TagRepository;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.web.multipart.MultipartFile;
 
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -38,7 +41,7 @@ class ShopIntegrationTest extends IntegrationTest {
 
     @Test
     @DisplayName("단일 가게 생성")
-    void createOne() {
+    void createOne() throws IOException {
         // given
         Category 식당 = createCategory("식당");
         Category 한식 = createCategory("한식");
@@ -47,35 +50,24 @@ class ShopIntegrationTest extends IntegrationTest {
         Tag 포항 = createTag("포항");
         Tag 영일대 = createTag("영일대");
 
-        List<MenuGroupRequestDto> menuGroupRequests = Arrays.asList(
-                new MenuGroupRequestDto("피자메뉴", Arrays.asList(
-                        new MenuRequestDto("치즈 피자", 15000),
-                        new MenuRequestDto("페퍼로니 피자", 16000)
-                )),
-                new MenuGroupRequestDto("파스타메뉴", Arrays.asList(
-                        new MenuRequestDto("토마토 파스타", 13000),
-                        new MenuRequestDto("크림 파스타", 13000)
-                ))
-        );
-
-        // TODO 나중에 로그인 된 유저만 할 수 있는지도 검증해야함
+        // TODO 나중에 로그인 된 유저만 할 수 있는지도 검증해야함(인터셉터)
         ShopCreateRequestDto shopCreateRequestDto = ShopCreateRequestDto.builder()
                                                                         .categoryId(식당.getId())
-                                                                        .subCategories(Arrays.asList(한식.getId(), 분식.getId()))
+                                                                        .subCategories(List.of(한식.getId(), 분식.getId()))
                                                                         .name("팜스발리")
                                                                         .businessHour("10:00 ~ 22:00")
                                                                         .phone("010-1234-5678")
                                                                         .address("경상북도 포항")
                                                                         .longitude("129.389762")
                                                                         .latitude("36.102440")
-                                                                        .tags(Arrays.asList(포항.getId(), 영일대.getId()))
-                                                                        //.images() TODO 이미지 저장 구현되면 추가
-                                                                        .menus(menuGroupRequests)
+                                                                        .tags(List.of(포항.getId(), 영일대.getId()))
+                                                                        .images(getImages())
+                                                                        .menus(getMenus())
                                                                         .build();
 
         // when
         Long id = shopService.create(shopCreateRequestDto);
-        Restaurant restaurant = (Restaurant) shopRepository.findById(id).get();
+        Restaurant restaurant = (Restaurant) shopRepository.getById(id);
 
         // then
         assertThat(id).isNotNull();
@@ -85,6 +77,28 @@ class ShopIntegrationTest extends IntegrationTest {
         assertThat(restaurant.getShopTags()).hasSize(2);
         assertThat(restaurant.getCategory().getName()).isEqualTo("식당");
         assertThat(restaurant.getShopCategories()).hasSize(2);
+        assertThat(restaurant.getMainImage()).contains("정면사진");
+    }
+
+    private List<MenuGroupRequestDto> getMenus() {
+        return List.of(
+                new MenuGroupRequestDto("피자메뉴", Arrays.asList(
+                        new MenuRequestDto("치즈 피자", 15000),
+                        new MenuRequestDto("페퍼로니 피자", 16000)
+                )),
+                new MenuGroupRequestDto("파스타메뉴", Arrays.asList(
+                        new MenuRequestDto("토마토 파스타", 13000),
+                        new MenuRequestDto("크림 파스타", 13000)
+                ))
+        );
+    }
+
+    private List<MultipartFile> getImages() {
+        return List.of(
+                ImageFactory.createFakeImage("정면사진"),
+                ImageFactory.createFakeImage("내부사진1"),
+                ImageFactory.createFakeImage("내부사진2")
+        );
     }
 
     protected Category createCategory(String name) {
